[package]
name = "blip-cli"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "chat", "contexts", "js_runner", "json_converter", "mirror", "types" ]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chat = { path = "./chat" }
clap = { version = "4.5.40", features = ["derive"] }
