[package]
name = "blip-cli"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "chat", "contexts", "domain", "file_handler", "http", "js_runner", "json_converter", "mirror", "tester", "ui"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chat = { path = "./chat" }
clap = { version = "4.5.40", features = ["derive"] }
mirror = { path = "./mirror" }
tester = { path = "./tester" }
file_handler = { path = "./file_handler" }
domain = { path = "./domain" }