[package]
name = "chat"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
contexts = { path = "../contexts" }
file_handler = { path = "../file_handler" }
js_runner = { path = "../js_runner" }
ui = { path = "../ui" }
domain = { path = "../domain" }
uuid = { version = "1", features = ["v4"] }