[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.140"
clap = { version = "4.5.40", features = ["derive"] }
domain = { path = "../domain" }
chat = { path = "../chat" }
mirror = { path = "../mirror" }
file_handler = { path = "../file_handler" }
tester = { path = "../tester" }