[package]
name = "types"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
contexts = { path = "../contexts" }
js_runner = { path = "../js_runner" }
json_converter = { path = "../json_converter" }
ui = { path = "../ui" }
colored = "2"